--- a/chouchou/main.css
+++ b/chouchou/main.css
@@ -54,7 +54,6 @@ html, body {
 header {
 	text-align: center;
 	width: 100%;
-	height: 600px;
 	position: relative;
 	background: #0091EA;
 	background-repeat: no-repeat;
@@ -129,15 +128,17 @@ header h1 img {
 }
 
 #device-art {
-	width: 100%;
-	height: 100%;
-	background-image: url(device-art.png);
-	background-size: 550px;
+	position: relative;
+	height: 500px;
+}
+#device-art img {
 	position: absolute;
 	bottom: 0;
+	max-height: 400px;
+	margin-left: auto;
+	margin-right: auto;
+	left: 0;
 	right: 0;
-	background-repeat: no-repeat;
-	background-position: bottom;
 }
 .appstore-ref {
 	margin: 0 auto;
